# Sheco

devel/: setup.sh
devel/include/pixy_msgs/: PixyBlock.h  PixyData.h  Servo.h
devel/include/test/: MsgTutorial.h
devel/include/test_service/: SrvTutorial.h  SrvTutorialRequest.h  SrvTutorialResponse.h
devel/lib/my_first_ros_pkg/: hello_world_node
devel/lib/openCV/: openCV  openCV_IRcamSub  openCV_img  openCV_pub  openCV_sub
devel/lib/pixy_node/: pixy_node  pixy_sub
devel/lib/pkgconfig/: my_first_ros_pkg.pc  openCV.pc  pixy_msgs.pc  pixy_node.pc  test.pc  test_service.pc  usb_cam.pc
devel/lib/python2.7/dist-packages/pixy_msgs/msg/: _PixyBlock.py  _PixyData.py  _Servo.py
devel/lib/python2.7/dist-packages/test/msg/: _MsgTutorial.py
devel/lib/python2.7/dist-packages/test_service/srv/: _SrvTutorial.py
devel/lib/test/: topic_publisher  topic_subscriber
devel/lib/test_service/: service_client  service_server
devel/lib/usb_cam/: usb_cam_node
devel/share/common-lisp/ros/pixy_msgs/msg/: PixyData.lisp
devel/share/common-lisp/ros/test/msg/: MsgTutorial.lisp  _package.lisp  _package_MsgTutorial.lisp  test-msg.asd
devel/share/common-lisp/ros/test_service/srv/: SrvTutorial.lisp  _package.lisp  _package_SrvTutorial.lisp  test_service-srv.asd
devel/share/gennodejs/ros/pixy_msgs/msg/: PixyData.js  _index.js
devel/share/gennodejs/ros/test/msg/: MsgTutorial.js
devel/share/gennodejs/ros/test_service/srv/: SrvTutorial.js
devel/share/my_first_ros_pkg/cmake/: my_first_ros_pkgConfig.cmake
devel/share/openCV/cmake/: openCV-msg-extras.cmake  openCV-msg-paths.cmake  openCVConfig.cmake
devel/share/pixy_msgs/cmake/: pixy_msgs-msg-paths.cmake  pixy_msgsConfig.cmake
devel/share/pixy_node/cmake/: pixy_node-msg-paths.cmake  pixy_nodeConfig.cmake
devel/share/ros_tutorials_topic/cmake/: ros_tutorials_topic-msg-paths.cmake
devel/share/roseus/ros/openCV/: manifest.l
devel/share/roseus/ros/pixy_msgs/: manifest.l
devel/share/roseus/ros/pixy_msgs/msg/: PixyData.l
devel/share/roseus/ros/pixy_node/: manifest.l
devel/share/roseus/ros/test/: manifest.l
devel/share/roseus/ros/test/msg/: MsgTutorial.l
devel/share/roseus/ros/test_service/: manifest.l
devel/share/roseus/ros/test_service/srv/: SrvTutorial.l
devel/share/test/cmake/: test-msg-paths.cmake  testConfig.cmake
devel/share/test_service/cmake/: test_service-msg-paths.cmake  test_serviceConfig.cmake
devel/share/usb_cam/cmake/: usb_camConfig.cmake
src/my_first_ros_pkg/: CMakeLists.txt
src/my_first_ros_pkg/src/: hello_world_node.cpp
src/openCV/: CMakeLists.txt
src/openCV/src/: openCV.cpp  openCV_IRcamSub.cpp  openCV_img.cpp  openCV_sub.cpp
src/test/: CMakeLists.txt  package.xml
src/test/src/: topic_pub.cpp  topic_sub.cpp
src/test_service/: CMakeLists.txt
src/test_service/src/: service_client.cpp  service_server.cpp
